fix default dark mode color of hero-widget top section

--- a/src/components/homepage/_homepage.scss
+++ b/src/components/homepage/_homepage.scss
@@ -316,7 +316,7 @@
 
 // Hero widget
 .hero-widget {
-  background-color: $subhead-bg-color;
+  background-color: $header-hero-widget-bg-color;
   color: $header-button-color;
   max-height: 410px;
   min-height: 370px;
