--- a/src/core/_config.scss
+++ b/src/core/_config.scss
@@ -18,6 +18,7 @@ $header-disabled-color: $ids-color-palette-slate-50;
 $header-focus-box-shadow: 0 0 4px 3px rgba(255, 255, 255, 0.3);
 
 $header-hero-text-color: rgba($ids-color-palette-white, 0.7);
+$header-hero-widget-bg-color: $subhead-bg-color;
 
 $masthead-bg-color: $ids-color-palette-slate-80;
 $masthead-border-color: $ids-color-palette-slate-80;
