--- a/src/themes/theme-classic-contrast.scss
+++ b/src/themes/theme-classic-contrast.scss
@@ -34,6 +34,7 @@ $header-toolbar-searchfield-icon-color: $ids-color-palette-white;
 $header-toolbar-button-hover-color: transparent;
 
 $header-hero-text-color: rgba($ids-color-palette-white, 1);
+$header-hero-widget-bg-color: $subhead-bg-color;
 
 $dropdown-search-bg-color: $ids-color-palette-white;
 $panel-bg-color: $ids-color-palette-white;
