--- a/src/themes/theme-classic-dark.scss
+++ b/src/themes/theme-classic-dark.scss
@@ -32,6 +32,7 @@ $header-toolbar-searchfield-icon-color: $ids-color-palette-white;
 $header-toolbar-button-hover-color: transparent;
 
 $header-hero-text-color: rgba($ids-color-palette-white, 0.7);
+$header-hero-widget-bg-color: $ids-color-palette-slate-90;
 
 $dropdown-search-bg-color: $ids-color-palette-slate-80;
 $panel-bg-color: $ids-color-palette-slate-70;
