--- a/src/themes/theme-new-dark.scss
+++ b/src/themes/theme-new-dark.scss
@@ -797,6 +797,7 @@ $header-flex-toolbar-input-searchfield-color: $ids-color-palette-white;
 $header-flex-toolbar-close-icon-color: $header-flex-toolbar-input-searchfield-color;
 
 $header-hero-text-color: rgba($ids-color-palette-white, 1);
+$header-hero-widget-bg-color: $ids-color-palette-slate-90;
 
 // Header Tabs
 $header-tabcontainer-border-color: $ids-color-palette-slate-90;
